# teacher-cert-validator

./: .gitignore  README.md  dev  flake.nix  lint  pyproject.toml
app/: config.py  main.py
app/models/: image_request.py
app/services/: image_encoder.py  openai_service.py
