[tool.poetry]
name = "fast_vision"
version = "0.1.0"
description = "POC using fastapi and openAI vision for validating teacher certification images."
authors = ["JohnCarter Gonzalez john@selkirk.com"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
numpy = "^1.26.4"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.20"}
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
black = "*"

[virtualenvs]
in-project = true
path = "./.venv"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
